app/assets/stylesheets/modules/layout.scss
#header-navbar {
  height: $brandbar-height;
  min-height: $brandbar-height;

  .navbar-brand {
    @extend .text-hide;

    background: transparent image-url("sul.png") no-repeat center left;
    height: $brandbar-height;
    padding: $brandbar-padding-vertical $navbar-padding-horizontal;
    width: 350px;

    @media (max-width: $screen-xs-max) {
      background: transparent image-url("sul-logo-small-white-text.png") no-repeat center left;
      width: 68px;
    }
  }

  .navbar-nav {
    @media (min-width: $grid-float-breakpoint) {
      > li {
        > a {
          padding-bottom: $brandbar-padding-vertical;
          padding-top: $brandbar-padding-vertical;
        }
      }
    }
  }

  .navbar-toggle {
    @include brandbar-vertical-align(34px);
  }

  .navbar-form {
    @include brandbar-vertical-align($input-height-base);
  }

  .navbar-btn {
    @include brandbar-vertical-align($input-height-base);

    &.btn-sm {
      @include brandbar-vertical-align($input-height-small);
    }

    &.btn-xs {
      @include brandbar-vertical-align(22);
    }
  }

  .navbar-text {
    @include brandbar-vertical-align($line-height-computed);
  }
}

.navbar-form {
  button {
    background-color: $color-beige-10;
    border-color: $color-gray-80;

    .glyphicon-search {
      color: $gray-light;
    }
  }
}

.sul-footer {
  margin-top: 2 * $padding-large-vertical;
}

